--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="Saludar"
     tools:context=".MainActivity">
 
     <TextView
@@ -23,6 +24,7 @@
         android:id="@+id/btnIniciar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="Despedir"
         android:text="INICIAR APP"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
